--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.2.4",
+    "framer-motion": "^11.1.7",
+    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.76.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "daisyui": "^4.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.6",
+    "eslint-config-next": "14.2.3",
     "typescript": "^5"
   }
 }
