--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.3.0",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
